// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayDropDownWithDrilldown renders 1`] = `
<body>
  <div>
    <div
      class="dropdown"
    >
      <button
        aria-controls="clay-dropdown-menu-1"
        aria-expanded="true"
        aria-haspopup="true"
        class="dropdown-toggle"
        data-testid="trigger"
        style=""
      />
    </div>
  </div>
  <div>
    <div>
      <div
        class="dropdown-menu drilldown dropdown-menu-indicator-end show"
        id="clay-dropdown-menu-1"
        role="presentation"
        style="left: -999px; top: -995px;"
      >
        <div
          class="drilldown-inner"
        >
          <div
            aria-hidden="false"
            class="drilldown-item drilldown-current"
          >
            <ul
              class="list-unstyled"
              role="menu"
            >
              <li
                role="presentation"
              >
                <a
                  class="dropdown-item"
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Hash Link
                </a>
              </li>
              <li
                role="presentation"
              >
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="-1"
                >
                  Alert!
                </button>
              </li>
              <li
                role="presentation"
              >
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="-1"
                >
                  Subnav
                  <span
                    aria-label="Go to Subnav"
                    class="dropdown-item-indicator-end"
                    title="Go to Subnav"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-angle-right"
                      role="presentation"
                    >
                      <use
                        href="##angle-right"
                      />
                    </svg>
                  </span>
                </button>
              </li>
            </ul>
          </div>
          <div
            aria-hidden="true"
            class="drilldown-item"
          >
            <ul
              class="list-unstyled"
              role="menu"
            >
              <li
                role="presentation"
              >
                <a
                  class="dropdown-item"
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  2nd hash link
                </a>
              </li>
              <li
                role="presentation"
              >
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="-1"
                >
                  Subnav
                  <span
                    aria-label="Go to Subnav"
                    class="dropdown-item-indicator-end"
                    title="Go to Subnav"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-angle-right"
                      role="presentation"
                    >
                      <use
                        href="##angle-right"
                      />
                    </svg>
                  </span>
                </button>
              </li>
            </ul>
          </div>
          <div
            aria-hidden="true"
            class="drilldown-item"
          >
            <ul
              class="list-unstyled"
              role="menu"
            >
              <li
                role="presentation"
              >
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="-1"
                >
                  The
                </button>
              </li>
              <li
                role="presentation"
              >
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="-1"
                >
                  End
                </button>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ClayDropDownWithDrilldown renders dividers 1`] = `
<body>
  <div>
    <div
      class="dropdown"
    >
      <button
        aria-controls="clay-dropdown-menu-2"
        aria-expanded="true"
        aria-haspopup="true"
        class="dropdown-toggle"
        data-testid="trigger"
        style=""
      />
    </div>
  </div>
  <div>
    <div>
      <div
        class="dropdown-menu drilldown dropdown-menu-indicator-end show"
        id="clay-dropdown-menu-2"
        role="presentation"
        style="left: -999px; top: -995px;"
      >
        <div
          class="drilldown-inner"
        >
          <div
            aria-hidden="true"
            class="drilldown-item"
          >
            <ul
              class="list-unstyled"
              role="menu"
            >
              <li
                role="presentation"
              >
                <a
                  class="dropdown-item"
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Hash Link
                </a>
              </li>
              <li
                class="dropdown-divider"
                role="separator"
              />
              <li
                role="presentation"
              >
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="-1"
                >
                  Alert!
                </button>
              </li>
              <li
                class="dropdown-divider"
                role="separator"
              />
              <li
                role="presentation"
              >
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="-1"
                >
                  Subnav
                  <span
                    aria-label="Go to Subnav"
                    class="dropdown-item-indicator-end"
                    title="Go to Subnav"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-angle-right"
                      role="presentation"
                    >
                      <use
                        href="##angle-right"
                      />
                    </svg>
                  </span>
                </button>
              </li>
            </ul>
          </div>
          <div
            aria-hidden="true"
            class="drilldown-item"
          >
            <ul
              class="list-unstyled"
              role="menu"
            >
              <li
                role="presentation"
              >
                <a
                  class="dropdown-item"
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  2nd hash link
                </a>
              </li>
              <li
                class="dropdown-divider"
                role="separator"
              />
              <li
                role="presentation"
              >
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="-1"
                >
                  Subnav
                  <span
                    aria-label="Go to Subnav"
                    class="dropdown-item-indicator-end"
                    title="Go to Subnav"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-angle-right"
                      role="presentation"
                    >
                      <use
                        href="##angle-right"
                      />
                    </svg>
                  </span>
                </button>
              </li>
            </ul>
          </div>
          <div
            aria-hidden="true"
            class="drilldown-item"
          >
            <ul
              class="list-unstyled"
              role="menu"
            >
              <li
                role="presentation"
              >
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="-1"
                >
                  The
                </button>
              </li>
              <li
                class="dropdown-divider"
                role="separator"
              />
              <li
                role="presentation"
              >
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="-1"
                >
                  End
                </button>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ClayDropDownWithDrilldown renders with the menu initially active 1`] = `
<body>
  <div>
    <div
      class="dropdown"
    >
      <button
        aria-controls="clay-dropdown-menu-3"
        aria-expanded="true"
        aria-haspopup="true"
        class="dropdown-toggle"
        data-testid="trigger"
      />
    </div>
  </div>
</body>
`;

exports[`ClayDropDownWithDrilldown the menu can be toggled by clicking in an item 1`] = `
<body>
  <div>
    <div
      class="dropdown"
    >
      <button
        aria-controls="clay-dropdown-menu-4"
        aria-expanded="false"
        aria-haspopup="true"
        class="dropdown-toggle"
        data-testid="trigger"
      />
    </div>
  </div>
  <div>
    <div>
      <div
        aria-hidden="true"
        class="dropdown-menu drilldown dropdown-menu-indicator-end"
        id="clay-dropdown-menu-4"
        role="presentation"
      >
        <div
          class="drilldown-inner"
        >
          <div
            aria-hidden="false"
            class="drilldown-item drilldown-current"
          >
            <ul
              class="list-unstyled"
              role="menu"
            >
              <li
                role="presentation"
              >
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="-1"
                >
                  Toggle
                </button>
              </li>
              <li
                role="presentation"
              >
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="-1"
                >
                  Subnav
                  <span
                    aria-label="Go to Subnav"
                    class="dropdown-item-indicator-end"
                    title="Go to Subnav"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-angle-right"
                      role="presentation"
                    >
                      <use
                        href="##angle-right"
                      />
                    </svg>
                  </span>
                </button>
              </li>
            </ul>
          </div>
          <div
            aria-hidden="true"
            class="drilldown-item"
          >
            <ul
              class="list-unstyled"
              role="menu"
            >
              <li
                role="presentation"
              >
                <a
                  class="dropdown-item"
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  2nd hash link
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
